--- a/github/workflows/deploy-tf-state-bucket.yml
+++ b/github/workflows/deploy-tf-state-bucket.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   deploy:
-    name: 'Deploy Terraform state bucket'
+    name: Deploy Terraform state bucket
     runs-on: ubuntu-latest
 
     defaults:
